mock objects embed into DataService to test NGRX

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <ion-content padding>
       <ion-list>
         <ion-item>
-          <ion-label>Meu Carrinho</ion-label>
+          <ion-label>My Chest</ion-label>
           <ion-note slot="end" color="danger">{{ (cart$ | async).products.length }}</ion-note>
         </ion-item>
       </ion-list>
