--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,7 +16,7 @@
 <ion-footer>
   <ion-toolbar color="dark">
     <ion-buttons slot="end">
-      <ion-title>{{ (cart$ | async).total | currency: 'BRL' }}</ion-title>
+      <ion-title>{{ (cart$ | async).total | currency: 'EUR' }}</ion-title>
       <ion-button color="success" fill="solid">Checkout</ion-button>
     </ion-buttons>
   </ion-toolbar>
