--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -2,7 +2,7 @@
   <ion-item>
     <ion-label class="text-center">
       <small>
-        Seu carrinho está vazio
+        Your cart is empty
       </small>
     </ion-label>
   </ion-item>
@@ -12,7 +12,7 @@
   <ion-item>
     <ion-button slot="end" (click)="reset()" fill="clear" color="danger">
       <ion-icon slot="start" name="trash"></ion-icon>
-      Limpar Carrinho
+      Clear Cart
     </ion-button>
   </ion-item>
   <ion-item *ngFor="let item of (cart$ | async).products">
@@ -21,7 +21,7 @@
     </ion-avatar>
     <ion-label>
       <small>{{ item.title }}</small><br>
-      {{ item.price | currency: 'BRL' }}
+      {{ item.price | currency: 'EUR' }}
     </ion-label>
     <ion-button slot="end" (click)="presentRemoveConfirm(item)" fill="clear" color="danger">
       <ion-icon slot="icon-only" name="trash"></ion-icon>
